it's a game now

--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "dependencies": {
     "a-big-triangle": "^1.0.3",
     "angle-normals": "^1.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-glslify": "^2.0.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "getusermedia": "^2.0.1",
     "gl": "^4.0.4",
     "gl-now": "^1.4.0",
@@ -36,6 +41,7 @@
     "glsl-turntable-camera": "^1.0.0",
     "glslify": "^6.1.0",
     "grapesjs": "^0.12.45",
+    "html5-gamepad": "^1.1.0",
     "lodash": "^4.17.4",
     "mouse-change": "^1.4.0",
     "regl": "^1.3.0",
