--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "regl": "^1.3.0",
     "regl-camera": "^2.1.1",
     "regl-recorder": "^0.2.0",
+    "regl-shader-error-overlay": "^1.0.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
