--- a/package.json
+++ b/package.json
@@ -30,20 +30,13 @@
     "gl-now": "^1.4.0",
     "gl-shader": "^4.2.1",
     "glsl-camera-ray": "^1.0.0",
-    "glsl-diffuse-oren-nayar": "^1.0.2",
-    "glsl-dither": "^1.0.1",
     "glsl-fractal-brownian-noise": "^1.0.1",
     "glsl-hsv2rgb": "^1.0.0",
     "glsl-noise": "0.0.0",
-    "glsl-raytrace": "^1.0.0",
-    "glsl-sdf-normal": "^1.0.0",
     "glsl-smooth-min": "^1.0.0",
-    "glsl-specular-gaussian": "^1.0.0",
     "glsl-square-frame": "^1.0.1",
-    "glsl-turntable-camera": "^1.0.0",
-    "glsl-voronoi-noise": "^1.1.0",
+    "glsl-worley": "^1.0.2",
     "glslify": "^6.1.0",
-    "grapesjs": "^0.12.45",
     "html5-gamepad": "^1.1.0",
     "lodash": "^4.17.4",
     "mouse-change": "^1.4.0",
