--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "regl": "^1.3.0",
     "regl-camera": "^2.1.1",
     "regl-recorder": "^0.2.0",
-    "regl-shader-error-overlay": "^1.0.0",
+    "regl-shader-error-overlay": "../regl-shader-error-overlay/",
     "tone": "^0.11.11",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.8.1",
